# dodamediaplayer

./: .gitignore  README.md  doda-media-player.html  doda-player.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: app.py  main.py
src/core/: config.py  playlist.py  subtitles.py  visualizer.py
src/ui/: main.qml
