[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doda-media-player"
version = "0.1.1"
description = "A cross-platform media player built with PyQt6 and QML"
authors = [{name = "DodaMediaPlayer"}]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5",
    "yt-dlp>=2024.0",
    "numpy>=2.0",
    "av>=10.0",
]

[project.scripts]
doda-player = "src.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
